@@ -3788,3 +3788,4 @@ Changelog for GXemul:
 20081219	Continuing a little bit on the osiop SCRIPTS ISA.
 20081221	Implementing an instruction combination for M88K idle loop
 		detection (works with OpenBSD/mvme88k).
+		Adding a dummy LUNA 88K machine mode (machine_luna88k.c).
